<?xml version="1.0" encoding="utf-8"?><!--
  Designed and developed by 2020 skydoves (Jaewoong Eum)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License. -->
<resources>
  <string name="app_name">Victory</string>
  <string name="weight">Weight</string>
  <string name="height">Height</string>
  <string name="base_stats">Base Stats</string>
  <string name="hp">HP</string>
  <string name="atk">ATK</string>
  <string name="def">DEF</string>
  <string name="spd">SPD</string>
  <string name="exp">EXP</string>
  <string name="home" translatable="false">首页</string>
  <string name="friend" translatable="false">朋友</string>
  <string name="message" translatable="false">消息</string>
  <string name="mine" translatable="false">我</string>
  <string name="movie_ranking" translatable="false">抖音电影榜单</string>
  <string name="tv_ranking" translatable="false">抖音剧集榜单</string>
  <string name="shows_ranking" translatable="false">抖音综艺榜单</string>
  <string name="release_name" translatable="false"> 播出</string>
  <string name="hot_name" translatable="false">热度 </string>
  <string name="refresh" translatable="false">刷新</string>
  <string name="img_test" translatable="false">https://p9-dy.byteimg.com/obj/compass/93204d13cf5a4fb080e74ea6d057eca1?from=552310259</string>
  <string name="work" translatable="false">作品</string>
  <string name="private_work" translatable="false">私密</string>
  <string name="collect" translatable="false">收藏</string>
  <string name="like" translatable="false">喜欢</string>
  <string name="city" translatable="false">城市: </string>
  <string name="point" translatable="false">・</string>
  <string name="get_like" translatable="false"> 获赞</string>
  <string name="get_fans" translatable="false"> 粉丝</string>
  <string name="get_watch" translatable="false"> 关注</string>
  <string name="watch" translatable="false">关  注</string>
  <string name="fans" translatable="false">粉  丝</string>
  <string name="nullString" translatable="false">暂无</string>
  <string name="zeroString" translatable="false">0 </string>
  <string name="auth_page" translatable="false">授权页面</string>
  <string name="add_tips" translatable="false">+ 添加年龄、学校等标签</string>
  <string-array name="planets_array">
    <item>Mercury</item>
    <item>Venus</item>
    <item>Earth</item>
    <item>Mars</item>
    <item>Jupiter</item>
    <item>Saturn</item>
    <item>Uranus</item>
    <item>Neptune</item>
  </string-array>
</resources>