<?xml version="1.0" encoding="utf-8"?><!--
  Designed and developed by 2020 skydoves (Jaewoong Eum)

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  >

  <data>

    <variable
      name="vm"
      type="com.qxy.victory.ui.main.MainViewModel" />

    <variable
      name="adapter"
      type="com.qxy.victory.ui.adapter.ViewPagerAdapter" />
  </data>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.viewpager2.widget.ViewPager2
      android:id="@+id/layout_viewpage"
      android:layout_width="0dp"
      android:layout_height="0dp"
      app:adapter="@{adapter}"
      app:layout_constraintBottom_toTopOf="@id/bottom_nav"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:userInputEnabled="@{false}">


    </androidx.viewpager2.widget.ViewPager2>


    <com.google.android.material.tabs.TabLayout
      android:id="@+id/bottom_nav"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:page_change="@{layoutViewpage}"
      app:tabIndicatorColor="@color/black"
      app:tabSelectedTextColor="@color/white"
      app:tabTextColor="@color/white_56">

      <com.google.android.material.tabs.TabItem
        android:id="@+id/action_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/home" />

      <com.google.android.material.tabs.TabItem
        android:id="@+id/action_friend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/friend" />

      <com.google.android.material.tabs.TabItem
        android:id="@+id/action_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

      <com.google.android.material.tabs.TabItem
        android:id="@+id/action_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/message" />

      <com.google.android.material.tabs.TabItem
        android:id="@+id/action_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mine" />


    </com.google.android.material.tabs.TabLayout>

    <ImageView
      android:id="@+id/imageView"
      android:layout_width="75sp"
      android:layout_height="0dp"
      android:padding="5dp"
      app:layout_constraintTop_toTopOf="@id/bottom_nav"

      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:srcCompat="@drawable/ic_add" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</layout>