<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools">

  <data>

    <variable
      name="vm"
      type="com.qxy.victory.ui.fragment.home.HomeViewModel" />

  </data>

  <com.skydoves.transformationlayout.TransformationLayout
    android:id="@+id/transformationLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:transformation_duration="550">

    <androidx.constraintlayout.widget.ConstraintLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:background="@color/background"
      android:clipToPadding="false"
      tools:context=".MainActivity">

      <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <include
          android:id="@+id/main_toolbar"
          layout="@layout/toolbar_home" />
      </com.google.android.material.appbar.AppBarLayout>

      <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appBarLayout">


        <Button
          android:id="@+id/btn_movie"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/movie_ranking" />

        <Button
          android:id="@+id/btn_tv"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/tv_ranking" />

        <Button
          android:id="@+id/btn_shows"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="center"
          android:text="@string/shows_ranking" />


      </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
  </com.skydoves.transformationlayout.TransformationLayout>

</layout>